<resources>
    <string name="app_name">TestApp1</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="Previous_Performance">Previous Performance</string>
    <string name="action_whiteboard">Whiteboard</string>
    <string name="action_wod">WOD</string>
    <string name="action_lift">Lift</string>

    <string name="title_activity_display_message">My Message</string>
    <string-array name="brew_array">
        <item>Cappuccino</item>
        <item>Espresso</item>
        <item>Mocha</item>
        <item>Caffè Americano</item>
        <item>Cafe Zorro</item>
    </string-array>

    <string-array name="titles">
        <item>Activities</item>
        <item>Services</item>
        <item>Content Providers</item>
        <item>Intents and Intent Filters</item>
    </string-array>
    <string-array name="descriptions">
        <item>An Activity is an application component that provides a screen with which the user can interact in order to do something.</item>
        <item>A Service is an application component that can perform long-running operations in the background</item>
        <item>Content Providers manage access to a structured set of data.</item>
        <item>Three of the core components of an application - activities, services, and brodcast receivers - are activated through ...</item>
    </string-array>


</resources>
